fixes nav arrow to point at the correct offscreen position. adds many ar/utilities functions for extracting and manipulating rotation information from frames as quaternions. builds a function into draw/index to snap frames to the marker plane if they are almost at the correct rotation. currently not triggered, but plan to use in the future.

--- a/css/index.css
+++ b/css/index.css
@@ -1203,3 +1203,7 @@ Logic Interface CSS
 .pocketScrollBarSegmentActive {
     background-color: rgba(0,255,255,0.3);
 }
+
+.snappableFrame {
+    opacity: 0.6;
+}
